# qubit-os-hardware

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PLAN-phase3.md  README.md  build.rs  test_output.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
docs/: BACKEND-SDK.md
scripts/: ci-check.sh
src/: config.rs  error.rs  lib.rs  main.rs  test_utils.rs
src/backend/: compiler.rs  mod.rs  registry.rs  trait.rs
src/backend/braket/: client.rs  mod.rs
src/backend/ibm/: client.rs  mod.rs
src/backend/iqm/: client.rs  mod.rs
src/backend/qutip/: mod.rs
src/grape/: expm.rs  mod.rs  optimize.rs  pyo3_bindings.rs  types.rs
src/lindblad/: dissipator.rs  integrate.rs  mod.rs  open_grape.rs  pyo3_bindings.rs  types.rs
src/proto/: mod.rs
src/server/: grpc.rs  mod.rs  rest.rs  temporal.rs
src/temporal/: budget.rs  constraints.rs  mod.rs  sequence.rs  types.rs
src/validation/: mod.rs
tests/: golden_grape.rs  golden_lindblad.rs  golden_lindblad_qutip.json  rust_crossval_golden.json
