[package]
name = "qubit-os-hardware"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["QubitOS Contributors"]
description = "Hardware Abstraction Layer for QubitOS quantum control kernel"
license = "Apache-2.0"
repository = "https://github.com/qubit-os/qubit-os-hardware"
keywords = ["quantum", "computing", "simulation", "pulse", "control"]
categories = ["science", "simulation"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
http = "0.2"

# REST API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Python interop (for QuTiP)
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"

# HTTP client (for IQM)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Config
config = "0.14"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
assert_matches = "1.5"
mockall = "0.14"

[[bin]]
name = "qubit-os-hal"
path = "src/main.rs"

[lib]
name = "qubit_os_hardware"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
